instaling and configuring worker page

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-table": "^7.7.0",
     "react-topbar-progress-indicator": "4.1.1",
     "socicon": "3.0.5",
-    "yup": "^1.0.0"
+    "yup": "^1.0.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/bootstrap": "5.1.10",
