--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-select": "^5.8.0",
     "react-table": "^7.7.0",
     "react-topbar-progress-indicator": "4.1.1",
+    "rxjs": "^7.8.1",
     "socicon": "3.0.5",
+    "sweetalert2": "^11.12.4",
     "yup": "^1.0.0",
     "zustand": "^4.5.5"
   },
