--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap-icons": "^1.5.0",
     "chart.js": "4.3.0",
     "clsx": "2.1.0",
+    "file-saver": "^2.0.5",
     "formik": "2.2.9",
     "line-awesome": "1.3.0",
     "nouislider": "15.5.1",
@@ -44,12 +45,14 @@
     "rxjs": "^7.8.1",
     "socicon": "3.0.5",
     "sweetalert2": "^11.12.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.0.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/bootstrap": "5.1.10",
     "@types/chart.js": "2.9.37",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "29.5.2",
     "@types/node": "20.3.1",
     "@types/prismjs": "1.26.0",
