--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "sass-loader": "13.2.0",
     "typescript": "^5.3.3",
     "vite": "^4.4.5",
+    "vite-tsconfig-paths": "5.0.1",
     "webpack": "5.74.0",
     "webpack-cli": "5.1.4",
     "webpack-rtl-plugin": "^2.0.0"
