--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "mini-css-extract-plugin": "2.6.1",
+    "msw": "^2.4.4",
     "remove-files-webpack-plugin": "^1.5.0",
     "rtlcss-webpack-plugin": "4.0.7",
     "sass": "1.55.0",
