--- a/package.json
+++ b/package.json
@@ -82,5 +82,10 @@
     "webpack": "5.74.0",
     "webpack-cli": "5.1.4",
     "webpack-rtl-plugin": "^2.0.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
