--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext .ts,.tsx",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -62,14 +62,16 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-table": "^7.7.9",
     "@types/sass-loader": "8.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "5",
+    "@typescript-eslint/parser": "5",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "css-loader": "6.7.1",
     "del": "7.0.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint": "8.39.0",
+    "eslint-plugin-import": "2.30.0",
+    "eslint-plugin-react": "7.36.1",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-refresh": "0.4.11",
     "mini-css-extract-plugin": "2.6.1",
     "msw": "^2.4.4",
     "remove-files-webpack-plugin": "^1.5.0",
