--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "rtlcss-webpack-plugin": "4.0.7",
     "sass": "1.55.0",
     "sass-loader": "13.2.0",
-    "typescript": "^5.3.3",
+    "typescript": "5.1.6",
     "vite": "^4.4.5",
     "vite-tsconfig-paths": "5.0.1",
     "webpack": "5.74.0",
