chore: Add husky for pre-commit linting

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext .ts,.tsx",
-    "preview": "vite preview"
+    "typecheck": "tsc --noEmit",
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "dependencies": {
     "@formatjs/intl-pluralrules": "5.2.4",
@@ -72,6 +74,7 @@
     "eslint-plugin-react": "7.36.1",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.11",
+    "husky": "9.1.6",
     "mini-css-extract-plugin": "2.6.1",
     "msw": "^2.4.4",
     "remove-files-webpack-plugin": "^1.5.0",
