--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@formatjs/intl-pluralrules": "5.2.4",
     "@formatjs/intl-relativetimeformat": "11.2.4",
     "@fortawesome/fontawesome-free": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.6",
     "animate.css": "4.1.1",
     "apexcharts": "3.35.0",
@@ -44,6 +46,7 @@
     "react-select": "^5.8.0",
     "react-table": "^7.7.0",
     "react-topbar-progress-indicator": "4.1.1",
+    "reactstrap": "^9.2.2",
     "rxjs": "^7.8.1",
     "socicon": "3.0.5",
     "sweetalert2": "^11.12.4",
