--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sweetalert2": "^11.12.4",
     "xlsx": "^0.18.5",
     "yup": "^1.0.0",
+    "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
