--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@formatjs/intl-pluralrules": "5.2.4",
     "@formatjs/intl-relativetimeformat": "11.2.4",
     "@fortawesome/fontawesome-free": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.6",
     "animate.css": "4.1.1",
     "apexcharts": "3.35.0",
@@ -26,6 +28,7 @@
     "file-saver": "^2.0.5",
     "formik": "2.2.9",
     "line-awesome": "1.3.0",
+    "lucide-react": "^0.445.0",
     "nouislider": "15.5.1",
     "prism-react-renderer": "2.0.5",
     "prism-themes": "1.9.0",
