--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.6",
     "animate.css": "4.1.1",
+    "antd": "^5.21.1",
     "apexcharts": "3.35.0",
     "axios": "1.6.5",
     "bootstrap": "5.3.3",
     "bootstrap-icons": "^1.5.0",
-    "chart.js": "4.3.0",
+    "chart.js": "^4.3.0",
     "clsx": "2.1.0",
     "file-saver": "^2.0.5",
     "formik": "2.2.9",
@@ -37,6 +38,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-bootstrap": "2.5.0-beta.1",
+    "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "5.1.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
