--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "rxjs": "^7.8.1",
     "socicon": "3.0.5",
     "sweetalert2": "^11.12.4",
+    "uuid": "^10.0.0",
     "xlsx": "^0.18.5",
     "yup": "^1.0.0",
     "zod": "^3.23.8",
@@ -71,6 +72,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-table": "^7.7.9",
     "@types/sass-loader": "8.0.3",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "5",
     "@typescript-eslint/parser": "5",
     "@vitejs/plugin-react-swc": "^3.3.2",
