--- a/.eslintrc
+++ b/.eslintrc
@@ -111,13 +111,14 @@
     {
       "files": ["src/**/*.ts", "src/**/*.tsx"],
       "rules": {
-        "max-len": "warn",
         "no-useless-catch": "warn",
         "@typescript-eslint/no-this-alias": "warn",
-        "@typescript-eslint/no-unused-vars": "error",
         "@typescript-eslint/no-empty-function": "warn",
         "@typescript-eslint/no-empty-interface": "warn",
-        "@typescript-eslint/no-use-before-define": "warn"
+        "@typescript-eslint/no-use-before-define": "warn",
+        "@typescript-eslint/ban-ts-comment": "off",
+        "max-len": "off",
+        "@typescript-eslint/no-unused-vars": "off"
       }
     }
   ],
