--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap-icons": "^1.5.0",
     "chart.js": "^4.3.0",
     "clsx": "2.1.0",
+    "cors": "^2.8.5",
     "file-saver": "^2.0.5",
     "formik": "2.2.9",
     "js-cookie": "^3.0.5",
