--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 .DS_Store
 package-lock.json
-
+ZeusApp-win32-x64/
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
