--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-bootstrap": "2.5.0-beta.1",
     "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "5.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-inlinesvg": "4.1.0",
